--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -26,6 +26,11 @@
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "axios-cookiejar-support": "^6.0.2",
+    "tough-cookie": "^5.1.2"
   }
 }
